--- a/javascript/effect/parallexEffect_apple.html
+++ b/javascript/effect/parallexEffect_apple.html
@@ -1,153 +1,137 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>패럴랙스apple</title>
 
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "NanumSquareNeo";
-      }
-      .fixed {
-        position: fixed;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-      }
-      .scrollTop {
-        position: fixed;
-        left: 10px;
-        top: 10px;
-        width: 40px;
-        height: 40px;
-        background: #0003;
-        border-radius: 50%;
-        text-align: center;
-        line-height: 40px;
-        z-index: 10000;
-      }
-      /* layout */
-      #contents {
-      }
-      #section1 {
-        height: 100000px;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>패럴랙스apple</title>
 
-      /* sec1 */
-      .sec1_text1 {
-        font-weight: 300;
-        font-size: 8vw;
-        white-space: nowrap;
-      }
-      .sec1_text2-1 {
-        font-size: 4vw;
-        font-weight: 100;
-        white-space: nowrap;
-      }
-      .sec1_text2,
-      .sec1_text3-1 {
-        font-weight: 300;
-        font-size: 8vw;
-        white-space: nowrap;
-      }
-      .sec1_text3 {
-        font-size: 6vw;
-        white-space: nowrap;
-      }
-      .sec1_text4 {
-        width: 20vw;
-        height: 20vw;
-        border-radius: 50%;
-        background: rgb(65, 126, 92);
-        border: 5px dashed #000;
-        color: #fff;
-        text-align: center;
-        line-height: 20vw;
-        font-size: 3vw;
-        font-weight: 900;
-      }
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "NanumSquareNeo";
+    }
 
-      /* sec2 */
-      .sec2_text1 {
-        width: 30%;
-        height: 50vh;
-        background: url(../assets/img/.jpg) no-repeat;
-        background-size: contain;
-        background-position: center;
-      }
-      .sec2_text2 {
-        font-weight: 300;
-        font-size: 8vw;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="scrollTop"></div>
-    <div id="contents">
-      <section id="section1">
-        <div class="sec1">
-          <div
-            class="sec1_text1 fixed"
-            data-0="top: 50%; opacity: 1"
-            data-500="top: 30%; opacity: 0"
-          >
-            안녕하세요!
-          </div>
-          <div
-            class="sec1_text2-1 fixed"
-            data-1000="top: 40%; opacity: 0"
-            data-1200="top: 30%; opacity: 1"
-            data-1600="top: 30%; opacity: 1"
-            data-1800="top: 20%; opacity: 0"
-          >
-            프론트앤드 개발자를 꿈꾸는
-          </div>
-          <div
-            class="sec1_text2-1 fixed"
-            data-1700="top: 40%; opacity: 0"
-            data-2000="top: 30%; opacity: 1"
-            data-2400="top: 30%; opacity: 1"
-            data-2600="top: 20%; opacity: 0"
-          >
-            ~~~~
-          </div>
-          <div
-            class="sec1_text2 fixed"
-            data-500="top: 70%; opacity: 0; transform: translate(-50%, -50%) scale(1);"
-            data-1000="top: 50%; opacity: 1; transform: translate(-50%, -50%) scale(1);"
-            data-2600="top: 50%; opacity: 1; transform: translate(-50%, -50%) scale(1);"
-            data-3000="top: 50%; opacity: 1; transform: translate(-50%, -50%) scale(0);"
-          >
-            저는
-            <span
-              data-1000="font-weight: 100;"
-              data-1400="font-weight: 900;"
-              data-1800="font-weight: 100;"
-              data-2200="font-weight: 900;"
-              data-2600="font-weight: 100;"
-              >유현주</span
-            >
-            입니다.
-          </div>
-          <div
-            class="sec1_text3 fixed"
-            data-2900="left: -100%; transform: translate(-50%, -50%) rotate(0deg) scale(1);"
-            data-3000="left: 50%; transform: translate(-50%, -50%) rotate(0deg) scale(1);"
-            data-3400="left: 50%; transform: translate(-50%, -50%) rotate(0deg) scale(1);"
-            data-3500="left: 150%; transform: translate(-50%, -50%) rotate(180deg) scale(0);"
-          >
-            자기소개 시작하겠습니다!
-          </div>
+    .fixed {
+      position: fixed;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .scrollTop {
+      position: fixed;
+      left: 10px;
+      top: 10px;
+      width: 40px;
+      height: 40px;
+      background: #0003;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 40px;
+      z-index: 10000;
+    }
+
+    /* layout */
+    #contents {}
+
+    #section1 {
+      height: 100000px;
+    }
+
+    /* sec1 */
+    .sec1_text1 {
+      font-weight: 300;
+      font-size: 8vw;
+      white-space: nowrap;
+    }
+
+    .sec1_text2-1 {
+      font-size: 4vw;
+      font-weight: 100;
+      white-space: nowrap;
+    }
+
+    .sec1_text2,
+    .sec1_text3-1 {
+      font-weight: 300;
+      font-size: 8vw;
+      white-space: nowrap;
+    }
+
+    .sec1_text3 {
+      font-size: 6vw;
+      white-space: nowrap;
+    }
+
+    .sec1_text4 {
+      width: 20vw;
+      height: 20vw;
+      border-radius: 50%;
+      background: rgb(65, 126, 92);
+      border: 5px dashed #000;
+      color: #fff;
+      text-align: center;
+      line-height: 20vw;
+      font-size: 3vw;
+      font-weight: 900;
+    }
+
+    /* sec2 */
+    .sec2_text1 {
+      width: 30%;
+      height: 50vh;
+      background: url(../assets/img/.jpg) no-repeat;
+      background-size: contain;
+      background-position: center;
+    }
+
+    .sec2_text2 {
+      font-weight: 300;
+      font-size: 8vw;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="scrollTop"></div>
+  <div id="contents">
+    <section id="section1">
+      <div class="sec1">
+        <div class="sec1_text1 fixed" data-0="top: 50%; opacity: 1" data-500="top: 30%; opacity: 0">
+          자! 도전, 열정
+        </div>
+        <!-- <div class="sec1_text2-1 fixed" data-1000="top: 40%; opacity: 0" data-1200="top: 30%; opacity: 1"
+          data-1600="top: 30%; opacity: 1" data-1800="top: 20%; opacity: 0">
+         ++++
+        </div>
+        <div class="sec1_text2-1 fixed" data-1700="top: 40%; opacity: 0" data-2000="top: 30%; opacity: 1"
+          data-2400="top: 30%; opacity: 1" data-2600="top: 20%; opacity: 0">
+        ++++++
+        </div> -->
+        <div class="sec1_text2 fixed" data-500="top: 70%; opacity: 0; transform: translate(-50%, -50%) scale(1);"
+          data-1000="top: 50%; opacity: 1; transform: translate(-50%, -50%) scale(1);"
+          data-2600="top: 50%; opacity: 1; transform: translate(-50%, -50%) scale(1);"
+          data-3000="top: 50%; opacity: 1; transform: translate(-50%, -50%) scale(0);">
+          거꾸로 하면
+          <span data-1000="font-weight: 100;" data-1400="font-weight: 900;" data-1800="font-weight: 100;"
+            data-2200="font-weight: 900;" data-2600="font-weight: 100;">정열</span>
+          전도 자!
+        </div>
+        <div class="sec1_text3 fixed" data-2900="left: -100%; transform: translate(-50%, -50%) rotate(0deg) scale(1);"
+          data-3000="left: 50%; transform: translate(-50%, -50%) rotate(0deg) scale(1);"
+          data-3400="left: 50%; transform: translate(-50%, -50%) rotate(0deg) scale(1);"
+          data-3500="left: 150%; transform: translate(-50%, -50%) rotate(180deg) scale(0);">
+
+        </div>
 
 
 
 
-          <!-- <div
+        <!-- <div
             class="sec1_text3 fixed"
             data-3000="top: 70%; left: -100%; opacity: 0; transform: translate(-50%, -50%);"
             data-3300="top: 50%; left: 50%; opacity: 1; transform: translate(-50%, -50%);"
@@ -162,7 +146,7 @@
 
 
 
-          <!-- <div
+        <!-- <div
             class="sec1_text4 fixed"
             data-3200="left: 50%; transform: translate(-50%, -50%) rotate(180deg) scale(0);"
             data-3300="left: 50%; transform: translate(-50%, -50%) rotate(0deg) scale(1);"
@@ -172,13 +156,13 @@
             🌵START🌵
           </div>
         </div> -->
-      </section>
-      <!-- //section1 -->
+    </section>
+    <!-- //section1 -->
 
 
-      
 
-      <!-- <section id="section2">
+
+    <!-- <section id="section2">
         <div
           class="sec2_text1 fixed"
           data-3300="left: -50%"
@@ -191,39 +175,40 @@
         >
           dhfksd
         </div> -->
-      </section>
-      <!-- //section2 -->
+    </section>
+    <!-- //section2 -->
 
 
 
 
 
-      <section id="section3"></section>
-      <!-- //section3 -->
-      <section id="section4"></section>
-      <!-- //section4 -->
-      <section id="section5"></section>
-      <!-- //section5 -->
-      <section id="section6"></section>
-      <!-- //section6 -->
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/skrollr@0.6.26/dist/skrollr.min.js"></script>
-    <script>
-      const s = skrollr.init();
-      function scroll() {
-        let scrollTop = window.scrollY || document.documentElement.scrollTop;
+    <section id="section3"></section>
+    <!-- //section3 -->
+    <section id="section4"></section>
+    <!-- //section4 -->
+    <section id="section5"></section>
+    <!-- //section5 -->
+    <section id="section6"></section>
+    <!-- //section6 -->
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/skrollr@0.6.26/dist/skrollr.min.js"></script>
+  <script>
+    const s = skrollr.init();
+    function scroll() {
+      let scrollTop = window.scrollY || document.documentElement.scrollTop;
 
-        document.querySelector(".scrollTop").innerText = Math.ceil(scrollTop);
+      document.querySelector(".scrollTop").innerText = Math.ceil(scrollTop);
 
-        // document.querySelector(".sec1_text1").style.marginLeft = -scrollTop + "px";
+      // document.querySelector(".sec1_text1").style.marginLeft = -scrollTop + "px";
 
-        // if(scrollTop>1300){
-        //     document.querySelector(".sec1_text2").style.opacity = 1;
-        //     document.querySelector(".sec1_text2").style.marginLeft = 3220 -scrollTop + "px";
-        // }
-        requestAnimationFrame(scroll);
-      }
-      scroll();
-    </script>
-  </body>
+      // if(scrollTop>1300){
+      //     document.querySelector(".sec1_text2").style.opacity = 1;
+      //     document.querySelector(".sec1_text2").style.marginLeft = 3220 -scrollTop + "px";
+      // }
+      requestAnimationFrame(scroll);
+    }
+    scroll();
+  </script>
+</body>
+
 </html>
