--- a/web__test/web02/index.htm
+++ b/web__test/web02/index.htm
@@ -1,34 +1,131 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <div class="logo">logo</div>
-      <nav class="menu">menu</nav>
-    </header>
-    <div class="imgslide">imgslide</div>
-    <div class="contents">
-      <ul class="tabmenu">
-        <li><div class="notice">notice</div></li>
-        <li><div class="gallery">gallery</div></li>
-      </ul>
 
-      <div class="others">
-        <div class="banner">banner</div>
-        <div class="shortcut">shortcut</div>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="javascript/jquery-1.12.3.js"></script>
+  <script src="javascript/script.js" defer></script>
+</head>
+
+<body>
+  <header>
+    <div class="headerwrap">
+      <div class="logo"><a href="#"><img src="images/logo.png" alt="로고"></a></div>
+      <div class="menu_bg"></div>
+      <nav class="menu">
+        <ul class="navi">
+          <li><a href="#">개인</a>
+            <ul class="submenu">
+              <li><a href="#">조회</a></li>
+              <li><a href="#">이체</a></li>
+              <li><a href="#">공과금</a></li>
+              <li><a href="#">예금/신탁</a>
+              </li>
+            </ul>
+          </li>
+          <li><a href="#">기업</a>
+            <ul class="submenu">
+              <li><a href="#">조회</a></li>
+              <li><a href="#">이체</a></li>
+              <li><a href="#">전자결제</a></li>
+              <li><a href="#">수표/어음</a></li>
+            </ul>
+          </li>
+          <li><a href="#">금융상품</a>
+            <ul class="submenu">
+              <li><a href="#">저축상품</a></li>
+              <li><a href="#">대출상품</a></li>
+              <li><a href="#">투자상품</a></li>
+
+            </ul>
+          </li>
+          <li><a href="#">카드</a>
+            <ul class="submenu">
+              <li><a href="#">카드정보</a></li>
+              <li><a href="#">카드신청</a></li>
+              <li><a href="#">이용내역조회</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <footer>
-      <div class="btlogo">btlogo</div>
-      <div class="stie">
-        <div class="btmenu">btmenu</div>
-        <div class="copy">copy</div>
+  </header>
+  <div class="imgslide">
+    <!-- 상하좌우 슬라이드 -->
+    <!-- 
+      <div class="slidelist">
+      <ul>
+        <li><a href="#"><span>대표 은행, 코리아은행</span><img src="images/img1.jpg" alt="이미지1"></a></li>
+        <li><a href="#"><span>차원이 다른 코리아은행</span><img src="images/img2.jpg" alt="이미지2"></a></li>
+        <li><a href="#"><span>더욱 쉬운 오픈뱅킹 서비스</span><img src="images/img3.jpg" alt="이미지3"></a>
+        </li>
+      </ul>
+    </div>
+   -->
+    <a href="#"><span>대표 은행, 코리아은행</span><img src="images/img1.jpg" alt="이미지1"></a>
+    <a href="#"><span>차원이 다른 코리아은행</span><img src="images/img2.jpg" alt="이미지2"></a>
+    <a href="#"><span>더욱 쉬운 오픈뱅킹 서비스</span><img src="images/img3.jpg" alt="이미지3"></a>
+
+  </div>
+  <div class="contents">
+    <ul class="tabmenu">
+      <li class="active"><a href="#">공지사항</a>
+        <div class="notice">
+          <ul>
+            <li><a href="#">대한은행 홈페이지 개편 안내<span>2022.03.01</span></a></li>
+            <li><a href="#">종합생활금융 플랫폼 코리아은행<span>2022.03.01</span></a></li>
+            <li><a href="#">시스템 정기 점검 안내<span>2022.03.01</span></a></li>
+            <li><a href="#">오픈뱅킹 앱 사용법 안내<span>2022.03.01</span></a></li>
+          </ul>
+        </div>
+      </li>
+      <li><a href="#">갤러리</a>
+        <div class="gallery">
+          <ul>
+            <li><a href="#"><img src="images/gallery1.jpg" alt="갤러리1"></a></li>
+            <li><a href="#"><img src="images/gallery2.jpg" alt="갤러리2"></a></li>
+            <li><a href="#"><img src="images/gallery3.jpg" alt="갤러리3"></a></li>
+          </ul>
+        </div>
+      </li>
+    </ul>
+
+    <div class="others">
+      <div class="banner"><a href="#"><span>배너</span><img src="images/banner.jpg" alt="배너"></a></div>
+      <div class="shortcut"><a href="#"><span>바로가기</span><img src="images/shortcut.jpg" alt="바로가기"></a></div>
+    </div>
+  </div>
+
+  <div class="modal_bg">
+    <div class="modal_layer">
+      <div class="layer_tit">
+        코리아은행 기업 서비스 개선 안내
       </div>
-    </footer>
-  </body>
+      <div class="layer_body">
+        코리아은행에서는 더 나은 금융서비스를 제공하고자
+        기업 금융서비스를 전면 개편하였습니다.
+        이번 개편을 통해 금융뿐만 아니라 고객 데이터 분석,
+        비금융 서비스 등을 제공하는 기업 종합금융 플랫폼으로
+        거듭나게 되었으며, 모든 금융계좌의 통합관리,
+        자금 수금 및 지급 실행 등 통합자금관리 서비스를
+        무료로 제공합니다.
+
+      </div>
+      <div class="btn">닫기</div>
+    </div>
+
+  </div>
+  <footer>
+    <div class="btlogo"><img src="images/btlogo.png" alt="로고"></div>
+    <div class="stie">
+      <div class="btmenu">하단메뉴1 하단메뉴2 하단메뉴3</div>
+      <div class="copy">COPYRIGHTⓒ by WEBDESIGN. ALL RIGHTS RESERVED</div>
+    </div>
+  </footer>
+</body>
+
 </html>
