--- a/web__test/web07/index.html
+++ b/web__test/web07/index.html
@@ -147,7 +147,11 @@
     <div class="bottom">
       <div class="btlogo">btlogo</div>
       <div class="site">
-        <div class="btmenu">btmenu</div>
+        <select name="sitelist" class="f_site">
+          <option value="#">패밀리사이트1</option>
+          <option value="#">패밀리사이트2</option>
+          <option value="#">패밀리사이트3</option>
+        </select>
         <div class="copy">copy</div>
       </div>
     </div>
