--- a/web__test/shop/index.html
+++ b/web__test/shop/index.html
@@ -1,118 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <script src="javascript/jquery-1.12.3.js"></script>
     <script src="javascript/script.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="logo"><a href="#"><img src="images/logo.jpg" alt=""></a></div>
-        <nav class="menu">
-
-            <ul class="navi">
-                <li><a href="#">탑</a>
-                    <ul class="submenu">
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">아우터</a>
-                    <ul class="submenu">
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">팬츠</a>
-                    <ul class="submenu">
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">악세사리</a>
-                    <ul class="submenu">
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                        <li><a href="#">탑</a></li>
-                    </ul>
-                </li>
+      <div class="logo">
+        <a href="#"><img src="images/logo.jpg" alt="" /></a>
+      </div>
+      <nav class="menu">
+        <ul class="navi">
+          <li>
+            <a href="#">탑</a>
+            <ul class="submenu">
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
             </ul>
-
-        </nav>
-
+          </li>
+          <li>
+            <a href="#">아우터</a>
+            <ul class="submenu">
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">팬츠</a>
+            <ul class="submenu">
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">악세사리</a>
+            <ul class="submenu">
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
+              <li><a href="#">탑</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="imgslide">
-        <div class="slidelist">
-            <ul>
-                <li><a href="#"><img src="images/img1.jpg" alt="이미지1"><span>쇼핑몰1</span></a></li>
-                <li><a href="#"><img src="images/img2.jpg" alt="이미지2"><span>쇼핑몰2</span></a></li>
-                <li><a href="#"><img src="images/img3.jpg" alt="이미지3"><span>쇼핑몰3</span></a></li>
-            </ul>
-        </div>
+      <div class="slidelist">
+        <ul>
+          <li>
+            <a href="#"
+              ><img src="images/img1.jpg" alt="이미지1" /><span
+                >쇼핑몰1</span
+              ></a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><img src="images/img2.jpg" alt="이미지2" /><span
+                >쇼핑몰2</span
+              ></a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><img src="images/img3.jpg" alt="이미지3" /><span
+                >쇼핑몰3</span
+              ></a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="contents">
-        <ul class="tabmenu">
-            <li class="active"><a href="#">공지사항</a>
-                <div class="notice">
-                    <ul>
-                        <li><a href="#">공지사항 공지내용<span>공지사항날짜</span></a></li>
-                        <li><a href="#">공지사항 공지내용<span>공지사항날짜</span></a></li>
-                        <li><a href="#">공지사항 공지내용<span>공지사항날짜</span></a></li>
-                        <li><a href="#">공지사항 공지내용<span>공지사항날짜</span></a></li>
-                    </ul>
-                </div>
-            </li>
-            <li><a href="#">갤러리</a>
-                <div class="gallery">
-                    <ul>
-                        <li><a href="#"><img src="images/gallery1.jpg" alt="갤러리"></a></li>
-                        <li><a href="#"><img src="images/gallery1.jpg" alt="갤러리"></a></li>
-                        <li><a href="#"><img src="images/gallery1.jpg" alt="갤러리"></a></li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-        <div class="banner_wrap">
-            <div class="banner1"><a href="#"><img src="images/banner1.jpg" alt="배너"></a></div>
-            <div class="banner2"><a href="#"><img src="images/banner2.jpg" alt="바로가기"></a></div>
+      <ul class="tabmenu">
+        <li class="active">
+          <a href="#">공지사항</a>
+          <div class="notice">
+            <ul>
+              <li>
+                <a href="#">공지사항 공지내용<span>공지사항날짜</span></a>
+              </li>
+              <li>
+                <a href="#">공지사항 공지내용<span>공지사항날짜</span></a>
+              </li>
+              <li>
+                <a href="#">공지사항 공지내용<span>공지사항날짜</span></a>
+              </li>
+              <li>
+                <a href="#">공지사항 공지내용<span>공지사항날짜</span></a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <a href="#">갤러리</a>
+          <div class="gallery">
+            <ul>
+              <li>
+                <a href="#"><img src="images/gallery1.jpg" alt="갤러리" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="images/gallery1.jpg" alt="갤러리" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="images/gallery1.jpg" alt="갤러리" /></a>
+              </li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+      <div class="banner_wrap">
+        <div class="banner1">
+          <a href="#"><img src="images/banner1.jpg" alt="배너" /></a>
         </div>
-
+        <div class="banner2">
+          <a href="#"><img src="images/banner2.jpg" alt="바로가기" /></a>
+        </div>
+      </div>
     </div>
     <div class="modal">
-        <div class="layer">
-            <div class="title">저스트쇼핑몰</div>
-            <div class="tbody">ㅣ;ㅇ너ㅏㄹ히ㅏ넝ㅁ히ㅓㅁㄴ닝히ㅏㄴ이ㅓㅣㅏㄴ어히ㅏ넝하넝ㅎ라ㅓㄴㅇ미ㅏㅓㄹ힌아머히ㅏㄴ멍히ㅏㅁ널히ㅓㄻㄴ하ㅓㅁ니ㅏ허니마어히낭머힌마ㅓㅇ히나멍히ㅓㄴ미ㅏ헌미ㅏ엏니마어히ㅏㄴ멍히
-            </div>
-            <div class="btn">닫기</div>
+      <div class="layer">
+        <div class="title">저스트쇼핑몰</div>
+        <div class="tbody">
+          ㅣ;ㅇ너ㅏㄹ히ㅏ넝ㅁ히ㅓㅁㄴ닝히ㅏㄴ이ㅓㅣㅏㄴ어히ㅏ넝하넝ㅎ라ㅓㄴㅇ미ㅏㅓㄹ힌아머히ㅏㄴ멍히ㅏㅁ널히ㅓㄻㄴ하ㅓㅁ니ㅏ허니마어히낭머힌마ㅓㅇ히나멍히ㅓㄴ미ㅏ헌미ㅏ엏니마어히ㅏㄴ멍히
         </div>
+        <div class="btn">닫기</div>
+      </div>
     </div>
     <footer>
-        <div class="f_wrap">
-            <div class="btlogo"><a href="#"><img src="images/bt_logo.jpg" alt="하단로고"></a></div>
-            <div class="copy">copyright all rights reserved just 쇼핑몰</div>
-            <div class="sns">
-                <ul>
-                    <li><a href="#"><img src="images/sns1.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="images/sns2.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="images/sns3.jpg" alt=""></a></li>
-                </ul>
-            </div>
-
+      <div class="f_wrap">
+        <div class="btlogo">
+          <a href="#"><img src="images/bt_logo.jpg" alt="하단로고" /></a>
         </div>
+        <div class="copy">copyright all rights reserved just 쇼핑몰</div>
+        <div class="sns">
+          <ul>
+            <li>
+              <a href="#"><img src="images/sns1.jpg" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/sns2.jpg" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/sns3.jpg" alt="" /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
