--- a/web__test/shop/index.html
+++ b/web__test/shop/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="javascript/jquery-1.12.3.js"></script>
-    <script src="javascript/script.js"></script>
+    <script src="javascript/script.js" defer></script>
 </head>
 
 <body>
