--- a/portfolio01/index.html
+++ b/portfolio01/index.html
@@ -14,15 +14,17 @@
         <div class="header">
           <h1>PORTFOLIO</h1>
           <nav>
-            <div class="about"><a href="#">ABOUT</a></div>
-            <div class="menu">
-              <ul>
-                <li><a href="#">STUDY</a></li>
-                <li><a href="#">SITE</a></li>
-                <li><a href="#">PAGES</a></li>
-                <li><a href="#">BANNERS</a></li>
-              </ul>
-            </div>
+            <ul>
+              <li class="about"><a href="#">ABOUT</a></li>
+              <li class="menu">
+                <ul>
+                  <li><a href="#">STUDY</a></li>
+                  <li><a href="#">SITE</a></li>
+                  <li><a href="#">PAGES</a></li>
+                  <li><a href="#">BANNERS</a></li>
+                </ul>
+              </li>
+            </ul>
           </nav>
         </div>
         <section>
