--- a/javascript/effect/gsap/gsap2.html
+++ b/javascript/effect/gsap/gsap2.html
@@ -1,86 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
         .img-wrap {
-            width: 1200px;
-            padding: 0;
-            margin: 0 auto;
             display: grid;
-            /* grid-column: 3; */
-
+            grid-template-columns: repeat(3, 1fr);
+            margin: 0 auto;
+            width: 1200px;
+            margin-top: 1000px;
         }
 
         .img {
-
-            height: 500px;
+            height: 600px;
             background-size: cover;
-
+            background-position: center center;
         }
 
         .img:nth-child(1) {
-            background-image: url(img/andrew-small-EfhCUc_fjrU-unsplash.jpg);
+            background-image: url("https://images.unsplash.com/photo-1500382017468-9049fed747ef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bGFuZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(2) {
-            background-image: url(img/annie-spratt-4wz1YsANFB0-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1503453363464-743ee9ce1584?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8bGFuZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(3) {
-            background-image: url(img/annie-spratt-90Zp9h6mamw-unsplash.jpg)
+            background-image: url("https://plus.unsplash.com/premium_photo-1664365805429-e1b229a005d1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bGFuZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(4) {
-            background-image: url(img/annie-spratt-hX_hf2lPpUU-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1591389703635-e15a07b842d7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bGFuZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(5) {
-            background-image: url(img/annie-spratt-WBpr_yH0Frg-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1629016943072-0bf0ce4e2608?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fGxhbmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(6) {
-            background-image: url(img/brigitte-tohm-buUFEtmNnjc-unsplash.jpg)
+            background-image: url("https://plus.unsplash.com/premium_photo-1664365805332-abd4bd4bf295?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fGxhbmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(7) {
-            background-image: url(img/cody-fitzgerald-lWJeGCgVbYI-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1500382017468-9049fed747ef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bGFuZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(8) {
-            background-image: url(img/cristina-pop-HEvkdZEUirQ-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1609984263066-3535ad427873?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGxhbmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(9) {
-            background-image: url(img/diana-olfert-JZVrDQAm_gk-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1623614640629-2aaa06e81af6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjF8fGxhbmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(10) {
-            background-image: url(img/erda-estremera-6ZyLeconAsg-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1572109646045-7cce4196cfd7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fGxhbmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(11) {
-            background-image: url(img/evie-s-w1JE5duY62M-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1586368570347-0dd5a0c928cb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fGxhbmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(12) {
-            background-image: url(img/han-chenxu-YdAqiUkUoWA-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1628761429018-d951e4966842?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzh8fGxhbmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(13) {
-            background-image: url(img/hisu-lee-V4Pn7QeYdPQ-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1610549144594-153ea3719ef2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDF8fGxhbmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(14) {
-            background-image: url(img/annie-spratt-4wz1YsANFB0-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1569306628201-e0a484ccbb73?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTB8fGxhbmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
         }
 
         .img:nth-child(15) {
-            background-image: url(img/j-lee-pXqAMSHIfXs-unsplash.jpg)
+            background-image: url("https://images.unsplash.com/photo-1604213410393-89f141bb96b8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NzB8fGxhbmR8ZW58MHx8MHx8&auto=format&fit=crop&w=400&q=60");
+        }
+
+        .img:nth-child(16) {
+            background-image: url("https://images.unsplash.com/photo-1591787823450-a18ae24a8ed9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NzV8fGxhbmR8ZW58MHx8MHx8&auto=format&fit=crop&w=400&q=60");
         }
     </style>
 </head>
@@ -96,30 +98,52 @@
         <div class="img"></div>
         <div class="img"></div>
         <div class="img"></div>
+        <div class="img"></div>
+        <div class="img"></div>
+        <div class="img"></div>
+        <div class="img"></div>
+        <div class="img"></div>
+        <div class="img"></div>
     </section>
-
-
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
-</body>
-<script>
-    gsap.registerPlugin(ScrollTrigger);
-
-
-    const tl = gsap.timeline({
-        ScrollTrigger: {
-            trigger: ".img-wrap .img",
-            markers: true,
-            start: "top 80%",
-            end: "top 30%",
-            scrub: true
+    <script>
+        gsap.registerPlugin(ScrollTrigger);
+        const lenis = new Lenis({
+            duration: 1.2,
+            easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)), // https://www.desmos.com/calculator/brs54l4xou
+            direction: 'vertical', // vertical, horizontal
+            gestureDirection: 'vertical', // vertical, horizontal, both
+            smooth: true,
+            mouseMultiplier: 1,
+            smoothTouch: false,
+            touchMultiplier: 2,
+            infinite: false,
+        })
+        //get scroll value
+        lenis.on('scroll', ({ scroll, limit, velocity, direction, progress }) => {
+            // console.log({ scroll, limit, velocity, direction, progress })
+        })
+        function raf(time) {
+            lenis.raf(time)
+            requestAnimationFrame(raf)
         }
+        requestAnimationFrame(raf)
+        const tl = gsap.timeline({
+            scrollTrigger: {
+                trigger: ".img-wrap .img",
+                scrub: 3
+                // scrub: true,
+            }
+        })
             .to(".img", {
-                y: -1000,
-                scrub: true,
+                y: -500,
+                scrub: 3,
+                stagger: .2,
+                // easing: "power1.out",
             })
-    });
-</script>
+    </script>
+</body>
 
 </html>
