--- a/javascript/effect/gsap/gsap3.html
+++ b/javascript/effect/gsap/gsap3.html
@@ -1,68 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
         * {
+            margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
 
-        .horizontalSection {
-            overscroll-behavior: ;
+        .horizontalWrap {
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
         }
 
-        .section {}
+        .horizontalSection {
+            overscroll-behavior: none;
+            width: 500%;
+            display: flex;
+            flex-wrap: nowrap;
+        }
 
-        .section1 {}
+        .section {
+            width: 100%;
+            height: 100vh;
+        }
 
-        .section2 {}
+        .section1 {
+            background-image: linear-gradient(45deg,
+                    #FF9A9E 0%,
+                    #FAD0C4 99%,
+                    #FAD0C4 100%);
+        }
 
-        .section3 {}
+        .section2 {
+            background-image: linear-gradient(to top, #A18CD1 0%, #FBC2EB 100%);
+        }
 
-        .section4 {}
+        .section3 {
+            background-image: linear-gradient(to top, #FAD0C4 0%, #FFD1FF 100%);
+        }
 
-        .section5 {}
+        .section4 {
+            background-image: linear-gradient(to top, #FBC2EB 0%, #A6C1EE 100%);
+        }
+
+        .section5 {
+            background-image: linear-gradient(120deg, #D4FC79 0%, #96E6A1 100%);
+        }
     </style>
 </head>
 
 <body>
-    <div>
+    <div class="horizontalWrap">
         <div class="horizontalSection">
             <section class="section section1"></section>
             <section class="section section2"></section>
             <section class="section section3"></section>
             <section class="section section4"></section>
             <section class="section section5"></section>
-            <section class="section section6"></section>
-
-
         </div>
     </div>
-
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
     <script>
         gsap.registerPlugin(ScrollTrigger);
-
-        const section = gsap.utils.toArray(".section");
-
-        gasp.to(
-            sections, {
+        const sections = gsap.utils.toArray(".section");
+        gsap.to(sections, {
             xPercent: -100 * (sections.length - 1),
             ease: "none",
-            scrollerTrigger: {
-
-            }
+            scrollTrigger: {
+                trigger: ".horizontalWrap",
+                pin: true,
+                scrub: 1,
+                end: "+=1000",
+                snap: 1 / (sections.length - 1),
+                markers: true,
+            },
         });
-
     </script>
-
 </body>
 
 </html>
