--- a/javascript/effect/gsap/gsap.html
+++ b/javascript/effect/gsap/gsap.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Document</title>
     <style>
         * {
-            padding: 0;
             margin: 0;
+            padding: 0;
         }
 
         #contents>section {
@@ -18,66 +17,67 @@
         }
 
         #section1 {
-            background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+            background-image: linear-gradient(to top, #FBC2EB 0%, #A6C1EE 100%);
         }
 
         #section2 {
-            background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
+            background-image: linear-gradient(to top, #FAD0C4 0%, #FFD1FF 100%);
         }
 
         #section3 {
-            background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+            background-image: linear-gradient(120deg, #84FAB0 0%, #8FD3F4 100%);
         }
 
         #section4 {
-            background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+            background-image: linear-gradient(120deg, #E0C3FC 0%, #8EC5FC 100%);
         }
 
         #section5 {
-            background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+            background-image: linear-gradient(120deg, #F093FB 0%, #F5576C 100%);
         }
 
         #section6 {
-            background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+            background-image: linear-gradient(to top, #FFF1EB 0%, #ACE0F9 100%);
         }
 
         .square {
-            width: 100px;
-            height: 100px;
-            background-image: linear-gradient(to top, #FFF1EB 0%, #ACE0F9 100%);
+            width: 200px;
+            height: 200px;
+            background-image: linear-gradient(to top, #D5D4D0 0%, #D5D4D0 1%, #EEEEEC 31%, #EFEEEC 75%, #E9E9E7 100%);
         }
 
         .square2 {
-            width: 100px;
-            height: 100px;
-            background-image: linear-gradient(to top, #FFF1EB 0%, #ACE0F9 100%);
+            width: 200px;
+            height: 200px;
+            background-image: linear-gradient(to right, #F83600 0%, #F9D423 100%);
         }
 
         .square.red {
-            background-image: linear-gradient(to top, #F43B47 0%, #453A94 100%);
+            background-image: linear-gradient(to top, #FF0844 0%, #FFB199 100%);
         }
 
+        /*  */
         .panel {
             height: 100vh;
-            background-color: rgb(189, 127, 127);
+            background-color: beige;
         }
 
         .box {
             width: 100px;
             height: 100px;
-            background-color: rgb(220, 233, 102);
+            background-color: #8EC5FC;
         }
 
         .box-red {
-            background-color: rgb(215, 191, 191);
+            background-color: red;
         }
 
         nav {
             position: sticky;
             top: 0;
             transition: all 600ms ease-in-out;
-            background-color: rgb(225, 158, 158);
-            color: #84fab0;
+            background-color: tan;
+            color: #000;
             text-align: center;
         }
 
@@ -87,8 +87,8 @@
         }
 
         .not-active {
-            /* background-color: rgb(224, 134, 134);
-            color: #086128; */
+            background: #fff;
+            color: #6A11CB;
         }
     </style>
 </head>
@@ -101,122 +101,102 @@
             <li>contact</li>
         </ul>
     </nav>
-    <div class="panel">djhasg;jkasf;gk</div>
-
-
-    <!-- <main id="contents">
-
-        <section id="section1"></section>
-        <section id="section2">
-            <div class="square"></div>
-
-        </section>
-        <section id="section3"></section>
-        <section id="section4"></section>
-        <section id="section5"></section>
-        <section id="section6"></section> -->
-
-    <!-- </main> -->
-
+    <div class="panel">
+        Creates a new standalone ScrollTrigger instance. You don't need to put ScrollTriggers directly into animations
+        (though that's probably the most common use case). With a standalone ScrollTrigger, you can tap into the rich
+        callback system to do almost anything.
+    </div>
+    <!-- <div class="box"></div>
+    <div class="panel"></div> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
-
     <script>
         gsap.registerPlugin(ScrollTrigger);
-
-
         ScrollTrigger.create({
             trigger: ".panel",
-            start: "top6%",
+            start: "top 6%",
             markers: true,
             toggleClass: { targets: "nav", className: "not-active" },
             onEnter: () => console.log("onEnter"),
             onLeave: () => console.log("onLeave"),
             onEnterBack: () => console.log("onEnterBack"),
-            onLeaverBack: () => console.log("onLeaverBack"),
+            onLeaveBack: () => console.log("onLeaveBack"),
         });
-
-
-
-
-    // const tl = gsap.timeline({
-    //     ScrollTrigger: {
-    //         trigger: ".square",
-    //         markers: true,
-    //         start: "top 80%",
-    //         end: "top 30%",
-    //         scrub: 1
-    //     }
-    // });
-        // const tl =gsap.timeline({repeat:2, yoyo:true});
-
-        // tl.to(".square", { x: 1000, duration: 2, rotation: 200, skewy: 1, eae: "elastic", borderRadius: 0 })
-        //     .to(".square", { y: 500, duration: 2, rotation: 0, skewy: 3, eae: "elastic", borderRadius: 100 })
-        //     .to(".square", { x: 0, duration: 2, rotation: 360, skewy: 1, eae: "elastic", borderRadius: 50, width: 400 })
-        //     .to(".square", { y: 0, duration: 2, rotion: 0, eae: "elastic", width: 200 })
-
-
-
         // gsap.to(".square", {
-        //     x: 1000,
+        //     // x: 1000,
         //     duration: 3,
-        //     ScrollTrigger: {
+        //     scrollTrigger: {
         //         trigger: ".square",
         //         start: "top 70%",
         //         end: "top 30%",
-
+        //         scrub: true,
+        //         // scrub: 4,    // 스무스하게 슬라이드 효과 / 숫자로 쓸 수도 있음.
         //         markers: {
-        //             startColor: "red",
+        //             startColor: "blue",
         //             endColor: "purple",
         //             fontSize: "30px"
         //         },
         //         toggleClass: "red",
-        //         toggleAction: "restart none none none",
+        //         toggleActions: "restart none none none",
+        //         pin: true,
+        //         pinSpacing: false,
         //     },
         // });
-    </script>
-    <script>
-        // gsap.registerPlugin(ScrollTrigger);
-        // gsap.to(".square", {
-        //     x: 1000,
-        //     duration: 3,
-        //     ScrollTrigger: {
+        // gsap.to(".square", {x: 1000, duration: 2, rotation: 100, skewY: 1, borderRadius: 0})
+        // gsap.to(".square", {y: 500, duration: 2, rotation: 0, skewY: 3, borderRadius: 100, delay: 2})
+        // gsap.to(".square", {x: 0, duration: 2, rotation: 300, skewY: 1, width: 400, delay: 4})
+        // gsap.to(".square", {y: 0, duration: 2, rotation: 0, width: 200, delay: 6})
+        // 타임라인 사용법
+        // tl.to 한번 쓰면 그 다음부터는 '.to'만 써도 됨, delay를 쓰지 않아도 된다는 장점
+        // const tl = gsap.timeline({repeat: 2, yoyo: true});
+        // tl.to(".square", {x: 1000, duration: 2, rotation: 100, skewY: 1, ease: "elastic", borderRadius: 0})
+        // .to(".square", {y: 500, duration: 2, rotation: 0, skewY: 3, ease: "elastic", borderRadius: 100})
+        // .to(".square", {x: 0, duration: 2, rotation: 300, skewY: 1, ease: "elastic", width: 400})
+        // .to(".square", {y: 0, duration: 2, rotation: 0, ease: "elastic", width: 200})
+        // const tl = gsap.timeline({
+        //     scrollTrigger : {
         //         trigger: ".square",
-        //         start: "top 70%",
-        //         end: "top 30%",
-                    // scrub: true,
-                    // scrub: 4,
-        //         markers: {
-        //             startColor: "red",
-        //             endColor: "purple",
-        //             fontSize: "30px"
-
-        //         },
-        //         toggleClass: "red",
-        //         toggleAction: "restart reverse none none"
-        //         // onEter onLeave onEnterBack onLeaveBack
-        //         // play pause resume reset restart complete revers none
-
-             // pin: true,
-                // // pin: ".square"
-                // pinSpacing: true
-        //     },
-        // });
-    </script>
-    <script>
-        // gsap.registerPlugin(ScrollTrigger);
-        // gsap.to(".square", {
-        //     x: 1000,
-        //     duration: 3,
-        //     ScrollTrigger: {
-        //         trigger: ".square",
-        //         start: "top 70%",
-        //         end: () => `+=${document.querySelector(".square").offsetHeight}`,
         //         markers: true,
-        //
+        //         start: "top 80%",
+        //         end: "top 30%",
+        //         scrub: 1,
+        //     }
+        // })
+        // tl.to(".square", {x: 1000, duration: 2, rotation: 100, skewY: 1, borderRadius: 0})
+        // .to(".square", {y: 500, duration: 2, rotation: 0, skewY: 3, borderRadius: 100})
+        // .to(".square", {x: 0, duration: 2, rotation: 300, skewY: 1, width: 400})
+        // .to(".square", {y: 0, duration: 2, rotation: 0, width: 200})
+    </script>
+    <script>
+        // gsap.registerPlugin(ScrollTrigger);
+        // 기본 애니메이션
+        // gsap.to(".square", {
+        //     x: 1000,
+        //     duration: 3,
+        //     scrollTrigger: {
+        //         trigger: ".square",
+        //         start: "top 70%",
+        //         end: "top 30%",
+        //         markers: {
+        //             startColor: "blue",
+        //             endColor: "purple",
+        //             fontSize: "30px"
+        //         },
+        //         toggleClass: "red",
+        //          toggleActions: "restart pause rssume restet",
         //     },
-                //  toggleClass: "red"
         // });
+        // 토글 액션
+        // toggleActions: "restart pause rssume restet",
+        // // onEnter / onLeave / onEnterBack / onLeaveBack
+        // // play, pause, resume, reset, restart, complete, revers, none
+        // 스크롤 할때마다 움직이기
+        // scrub: true,
+        // scrub: 4,    // 스무스하게 슬라이드 효과 / 숫자로 쓸 수도 있음.
+        // 고정
+        // pin: true,
+        // pinSpacing: false,
+        // gsap 사용법 더보기 : https://greensock.com/docs/v3/Plugins/ScrollTrigger
     </script>
 </body>
 
