--- a/javascript/3js/3js03.html
+++ b/javascript/3js/3js03.html
@@ -20,7 +20,8 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
-            background: radial-gradient(circle farthest-corner at center center, #071021, #19324A);
+            /* background: radial-gradient(circle farthest-corner at center center, #071021, #19324A); */
+            background: radial-gradient(circle farthest-corner at center center, #050305, #400f4e);
         }
     </style>
 </head>
@@ -36,9 +37,9 @@
                     height: window.innerHeight,
                 }
                 this.cameraParam = {
-                    fov: 1000,
+                    fov: 100,
                     near: 1,
-                    far: 1000
+                    far: 100000
                 }
                 this.scene = null;
                 this.rederer = null;
@@ -75,8 +76,8 @@
                     this.cameraParam.near,
                     this.cameraParam.far
                 );
-                this.camera.position.set(0, 0, 1000);
-                this.camera.lookAt(new THREE.Vector3(0, 0, 0));
+                this.camera.position.set(1, 10, 1000);
+                this.camera.lookAt(new THREE.Vector3(1, 100, 1000));
             }
             _setMesh() {
                 const vertices = [];
@@ -85,7 +86,7 @@
                 const geometry = new THREE.BufferGeometry();
                 const material = new THREE.PointsMaterial({
                     color: 0xffffff,
-                    size: 3
+                    size: 2
                 });
                 for (let i = 0; i < length; i++) {
                     const x = size * (Math.random() - 0.5);
@@ -101,14 +102,14 @@
                 this.scene.add(this.mesh)
             }
             _setFog() {
-                this.scene.fog = new THREE.Fog(0xffffff, 50, 200);
+                this.scene.fog = new THREE.Fog(0xffffff, 1, 2);
             }
             _update() {
                 let rotation = 0;
                 const radian = (rotation * Math.PI) / 180;
-                rotation += 0.1;
-                this.camera.position.x = 1000 * Math.sin(rotation);
-                this.camera.position.z = 1000 * Math.cos(rotation);
+                rotation += 0.5;
+                this.camera.position.x = 1 * Math.sin(rotation);
+                this.camera.position.z = 2 * Math.cos(rotation);
                 this.mesh.position.y += 1;
             }
             _render() {
