--- a/portfolio01/index.html
+++ b/portfolio01/index.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js" defer></script>
-  </head>
-  <body>
-    <div id="wrap">
-      <div class="container">
-        <div class="header">
-          <h1>PORTFOLIO</h1>
-          <nav>
-            <ul>
-              <li class="about"><a href="#">ABOUT</a></li>
-              <li class="menu">
-                <ul>
-                  <li><a href="#">STUDY</a></li>
-                  <li><a href="#">SITE</a></li>
-                  <li><a href="#">PAGES</a></li>
-                  <li><a href="#">BANNERS</a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <section>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="js/script.js" defer></script>
+</head>
+
+<body>
+  <div id="wrap">
+    <div class="container">
+      <div class="header">
+        <h1>PORTFOLIO</h1>
+        <nav>
           <ul>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
-            <li><a href="#">FIGMA WEBSITE,</a></li>
+            <li class="about"><a href="#">ABOUT</a></li>
+            <li class="menu">
+              <ul>
+                <li><a href="#">STUDY</a></li>
+                <li><a href="#">SITES</a></li>
+                <li><a href="#">PAGES</a></li>
+                <li><a href="#">BANNERS</a></li>
+              </ul>
+            </li>
           </ul>
-        </section>
-        <div class="footer">palepinkday@gmail.com</div>
+        </nav>
+      </div>
+      <section>
+        <ul>
+          <li><a href="#">Mouse Effect,</a></li>
+          <li><a href="#">Webstandard Site,</a></li>
+          <li><a href="#">Parallax Effect,</a></li>
+          <li><a href="#">Illustrator Icon,</a></li>
+          <li><a href="#">Site01,</a></li>
+          <li><a href="#">Site02,</a></li>
+          <li><a href="#">Banner01,</a></li>
+          <li><a href="#">Banner02,</a></li>
+          <li><a href="#">Banner03,</a></li>
+          <li><a href="#">Figma Website,</a></li>
+          <li><a href="#">Search Effect,</a></li>
+          <li><a href="#">Page01,</a></li>
+          <li><a href="#">Page02,</a></li>
+          <li><a href="#">Quiz Effect,</a></li>
+          <li><a href="#">Responsive Site01,</a></li>
+          <li><a href="#">3JS01,</a></li>
+          <li><a href="#">3JS02,</a></li>
+          <li><a href="#">3JS03,</a></li>
+        </ul>
+      </section>
+      <div class="footer"><a href="#">palepinkday@gmail.com</a>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
